# fajarquant

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  NOTICE_BILINGUAL_CORPUS_V1  README.md  THIRD_PARTY_NOTICES.md  build.rs  run_smoke.sh
.github/workflows/: ci.yml  paper-reproduce-smoke.yml
audit/: C0_baseline.md  C0_gpu_state.json  C0_model_availability.md  C1_llama2_access.md  C1_qwen_variant.md
bench/: METHODOLOGY.md  hardware_snapshot.txt  setup_perf.sh
bench/results/: noise_floor.json
benches/: noise_floor.rs  quant_latency.rs
cpu_kernels/bitnet_tl2/: bitnet-lut-kernels-tl2.h  ggml-bitnet-stub.h  wrapper.cpp
data/calibration/: fq_v2_mistral_7b_v0.1.npz  fq_v2_qwen2_7b.npz  fq_v3_gemma_4_e2b.json  fq_v3_mistral_7b_v0.1.json  fq_v3_qwen2_7b.json  profile_gemma.json  profile_gemma_4_e2b.json  profile_mistral_7b_v0.1.json  profile_qwen2_7b.json  strategy_gemma_2bit.json  strategy_gemma_4_e2b_2bit.json  strategy_gemma_4_e2b_2bit_ppl_guided.json  strategy_gemma_4_e2b_2bit_verified.json  strategy_gemma_4_e2b_3bit.json  strategy_gemma_4_e2b_4bit.json  strategy_mistral_7b_v0.1_2bit.json  strategy_mistral_7b_v0.1_2bit_ppl_guided.json  strategy_mistral_7b_v0.1_3bit.json  strategy_mistral_7b_v0.1_4bit.json  strategy_qwen2_7b_2bit.json  strategy_qwen2_7b_2bit_ppl_guided.json  strategy_qwen2_7b_3bit.json  strategy_qwen2_7b_4bit.json  thresholds_gemma_2bit.json  thresholds_gemma_3bit.json  thresholds_gemma_4bit.json  (+6 more)
docs/: ARTIFACT_APPENDIX.md  ARXIV_SUBMISSION.md  ARXIV_SUBMISSION_TEMPLATES.md  BASELINE_UNPORTED_FEATURES.md  FJQ_PHASE_D_3_4_B0_FINDINGS.md  FJQ_PHASE_D_ARCH.md  FJQ_PHASE_D_BASE_C1_GATE.md  FJQ_PHASE_D_CONFIG.md  FJQ_PHASE_D_FJM_V9_SPEC.md  FJQ_PHASE_D_GATE_CALIBRATION.md  FJQ_PHASE_D_MEDIUM_C1_GATE.md  FJQ_PHASE_D_OPS.md  FJQ_PHASE_D_P0_FINDINGS.md  FJQ_PHASE_D_P2_1_GATE.md  FJQ_PHASE_D_P2_FINDINGS.md  FJQ_PHASE_D_P3_FINDINGS.md  FJQ_PHASE_D_P4_1_5_BASE_GATE.md  FJQ_PHASE_D_P4_1_GATE.md  FJQ_PHASE_D_PAPER_OUTLINE.md  FJQ_PHASE_D_PRODUCTION_PLAN.md  FJQ_PHASE_E_BILINGUAL_CORPUS_V1.md  FJQ_PHASE_E_BILINGUAL_KERNEL_PRODUCTION_PLAN.md  FJQ_PHASE_E_E0_CI_GPU_PLAN.md  FJQ_PHASE_E_E0_DATA_VERSIONING.md  FJQ_PHASE_E_E0_EVAL_CANONICAL.md  FJQ_PHASE_E_E0_LICENSING.md  FJQ_PHASE_E_E0_PHASE_D_DEPENDENCY.md  FJQ_PHASE_E_E0_SYNTHETIC_LEGAL.md  FJQ_PHASE_E_E0_TOKENIZER_DECISION.md  FJQ_PHASE_E_E1_FINDINGS.md  FJQ_PHASE_E_E2_4_C_METRIC_SPEC.md  FJQ_PHASE_E_E2_4_FINDINGS.md  FJQ_PHASE_E_E2_BILINGUAL_CALIB_DECISION.md  FJQ_PHASE_E_E2_FINDINGS.md  FJQ_PHASE_E_E2_HADAMARD_DECISION.md  FJQ_PHASE_E_HARDWARE_DECISION.md  FJQ_PHASE_E_PATH_A_PAPER_OUTLINE.md  FJQ_PHASE_E_TAXPRIME_DATASET_SPEC.md  FJQ_PHASE_F_F10_2_BITLINEAR_DESIGN.md  FJQ_PHASE_F_F10_5_POL_FINDINGS.md  (+42 more)
eval/: HARNESS_SHA
examples/: adaptive_demo.fj  benchmark.fj  fused_demo.fj  hierarchical_demo.fj  kv_cache.fj  paper_benchmark.fj  tl2_smoke.rs
paper/: ARXIV_UPLOAD.md  FAJARQUANT_PAPER.md  Makefile  REPRODUCIBILITY.md  SUBMISSION.md  fajarquant.tex  fajarquant_mlsys.tex  mlsys2026.sty  references.bib  reproduce.sh  supplementary.tex
python/phase_d/: .gitignore  README.md  UPSTREAM_PIN.md  pyproject.toml
python/phase_d/configs/: __init__.py  base.py  medium.py  mini.py  stretch.py
python/phase_d/data/: prompts.json
python/phase_d/intllm/: __init__.py  data.py  eval.py  export.py  fp16_parity.py  lm_eval_wrapper.py  model.py  qat.py  quant.py  sparse_kernel.py  tokenizer.py  train.py
python/phase_d/scripts/: bench_baselines.py  bench_canonical.py  bench_f13_dispatch_calibration.py  bench_knowledge.py  bench_stream.py  cleanup_hf_cache.py  compare_running_max_train_vs_steady.py  eval_hadamard_posthoc.py  eval_smoothquant_posthoc.py  measure_igf_proj_dim_audit.py  measure_outlier_concentration.py  mini_inference_smoke.py  q5_bilingual_baseline.py  repack_to_tl2.py  repro_upstream.py  repro_upstream_results.json  repro_upstream_results.md  run_fp16_parity.py  smoke_forward.py  train_base.py  train_base_ablation.py  train_base_full_trace.json  train_base_pol_trace.json  train_medium.py  train_medium_ablation.py  train_medium_full_trace.json  train_medium_pol_trace.json  train_mini.py  train_mini_10000_trace.json  train_mini_ablation.py  train_mini_full_trace.json  train_mini_pol_trace.json  train_synthetic.py  verify_f10_5_sparsity.py
python/phase_d/tests/: test_configs.py  test_data.py  test_eval_quant_error.py  test_export.py  test_fp16_parity.py  test_model_shim.py  test_qat.py  test_quant.py  test_repack_to_tl2.py  test_sparse_bitlinear.py  test_sparse_kernel.py  test_tokenizer.py  test_train.py
scripts/: audit_unwrap.py  build_intllm_arxiv_tarball.sh  cache_compat.py  calibrate_fq_v2.py  calibrate_fq_v3.py  diag_gate_proj.py  diff.py  eval_fp16_baseline.py  eval_perplexity.py  eval_perplexity_v2.py  eval_perplexity_v3.py  extract_kv_cache.py  generate_paper_figures.py  hf_reference.py  install-git-hooks.sh  load_v8_weights.py  ppl_guided_select.py  profile_kv_heads.py  quant_attention.py  quant_attention_v2.py  quant_attention_v3.py  run_ablation.py  run_comparison.py  run_sim_trace.py  strategy_selector.py  strategy_verifier.py  tune_thresholds.py  verify_f13_dispatch.py  verify_intllm_tables.py  verify_paper_tables.py
src/: adaptive.rs  fused_attention.rs  hierarchical.rs  kivi.rs  lib.rs  turboquant.rs
tests/: test_strategy_selector.py
(+1630 files in other folders)
