[package]
name = "fajarquant"
version = "0.3.0"
edition = "2024"
authors = ["Muhamad Fajar Putranto <fajar@pajak.com>"]
description = "Adaptive per-head KV cache quantization for LLMs — matches or beats best fixed method in 7/9 cells across MQA/GQA architectures"
documentation = "https://docs.rs/fajarquant"
homepage = "https://github.com/fajarkraton/fajarquant"
repository = "https://github.com/fajarkraton/fajarquant"
license = "Apache-2.0"
readme = "README.md"
keywords = ["quantization", "llm", "kv-cache", "compression", "ml"]
categories = ["algorithms", "compression", "science", "no-std"]
rust-version = "1.87"
exclude = ["data/", "paper/", "scripts/", "docs/", "audit/", "bench/", "examples/"]

[dependencies]
ndarray = "0.16"

[dev-dependencies]
ndarray-rand = "0.15"
criterion = "0.5"

[lib]
name = "fajarquant"
path = "src/lib.rs"

[[bench]]
name = "noise_floor"
harness = false

[[bench]]
name = "quant_latency"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
